--- a/README
+++ b/README
@@ -7,13 +7,15 @@
  *                      Templates cover unique or "common" pages. A "common" page might fall under
  *                      a "section" (e.g., domain.com/section/page/) which doubles as a page as well.
  *                      That said, templates have a 1:1 relationship and a 1:MANY relationship with pages
- *                      which are essentially a "content" element, produced by content authors. With this
+ *                      which are essentially a "content" element, produced by content authors (CA). With this
  *                      approach, one could set up multiple pages per template or one page per template in
  *                      the CSS. In truth, the problems from a lack of an approach of this kind are:
  *
  *                          1. Insufficient foundation for Unit Testing CSS
- *                          2. "So I set up all these pages under page X, can you style them all alike since
- *                             they're 'children' (which is a natural assumption to make)?
+ *
+ *                          2. CA asks, "So I set up all these pages under page X, can you style them all 
+ *                             alike since they're all 'children'" (which is a natural assumption to make)?
+ *
  *                          3. How does one confidently control the cascade? (It's going to happen regardless
  *                             because of browser default stylesheet and complexity. Does one control/manage
  *                             the cascade or blindly (and redundantly) develop CSS until 4:33AM on Sunday?
