--- a/README
+++ b/README
@@ -25,10 +25,15 @@
  *                      USAGE-HTML:
  *                          LEGEND: (...) = optional/dynamic; 
  *
- *                          <html 
- *                              lang="en" 
- *                              id="domain-com" 
- *                              class="no-js theme-{theme_name} layout-{layout-name} template-{template_name} page (parent-parent-page-{page_name} parent-page-{page_name}) page-{page_name}">
+ *                          <html>
+ *                              @lang
+ *                                  en 
+ *                              @id
+ *                                  domain-com
+ *                              @class
+ *                                  no-js 
+ *                                  theme-{theme_name} layout-{layout-name} template-{template_name} 
+ *                                  page (parent-parent-page-{page_name} parent-page-{page_name}) page-{page_name}
  *
  *                      USAGE-CSS:
  *
